--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <!-- Link the style sheets and Google font -->
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet"> 
     <link rel="shortcut icon" type="image/png" href="images/pigeon-icon.png"/>
     <!-- Image by <a href="https://pixabay.com/users/chiplanay-1971251/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">chiplanay</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">Pixabay</a> -->
     <title>AU National Old Bird Hall of Fame Marathon Distance</title>
@@ -27,8 +31,8 @@
   * You can do it! (*•̀ᴗ•́*)و
   ******************************************** -->
   <body>
-    <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
     <main>
+      <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
       <table>
         <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <thead>
