--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Andika&display=swap" rel="stylesheet"> 
-    <link rel="shortcut icon" type="image/png" href="images/pigeon-icon.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/new-pigeon-icon.jpg"/>
     <!-- Image by <a href="https://pixabay.com/users/chiplanay-1971251/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">chiplanay</a> from <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3303111">Pixabay</a> -->
     <title>AU National Old Bird Hall of Fame Marathon Distance</title>
   </head>
